--- a/ChatRoomMain/MainWindow.xaml
+++ b/ChatRoomMain/MainWindow.xaml
@@ -1,15 +1,35 @@
-﻿<Window x:Class="ChatRoomMain.MainWindow"
+﻿<Window x:Name="MainWindow1" x:Class="ChatRoomMain.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ChatRoomMain"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525" Icon="Heads/Icon.png">
+        Title="MainWindow" Height="541" Width="653" Icon="Heads/Icon.png" Left="653" Top="220">
     <Window.Background>
-        <ImageBrush ImageSource="Heads/welcome back.jpg"/>
+        <ImageBrush ImageSource="Heads/welcomeback.png"/>
     </Window.Background>
     <Grid>
-        
+        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="206,379,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="170" BorderBrush="#FF383838" BorderThickness="2" Background="White" FontFamily="Century Gothic" SelectionBrush="#FF383838" Foreground="#FF383838" RenderTransformOrigin="0.5,0.5" TextAlignment="Center" FontWeight="Bold" FontSize="14">
+            <TextBox.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="1.761"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </TextBox.RenderTransform>
+        </TextBox>
+        <Button x:Name="button" Content="Go!" HorizontalAlignment="Left" Margin="414,377,0,0" VerticalAlignment="Top" Width="75" BorderThickness="2" Background="#FF383838" BorderBrush="#FF5F5D5D" Foreground="White" FontFamily="Ravie" RenderTransformOrigin="0.5,0.5" FontSize="13" Click="Login">
+            <Button.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="-4.1"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Button.RenderTransform>
+        </Button>
+
     </Grid>
 </Window>
