--- a/ChatRoomMain/MainWindow.xaml
+++ b/ChatRoomMain/MainWindow.xaml
@@ -5,12 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ChatRoomMain"
         mc:Ignorable="d"
-        Title="MainWindow" Height="541" Width="653" Icon="Heads/Icon.png" Left="653" Top="220">
+        Title="MainWindow" Height="541" Width="653" Icon="Heads/Icon.png" HorizontalAlignment="Center" VerticalAlignment="Center" ResizeMode="NoResize" Foreground="White">
     <Window.Background>
         <ImageBrush ImageSource="Heads/welcomeback.png"/>
     </Window.Background>
     <Grid>
-        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="206,379,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="170" BorderBrush="#FF383838" BorderThickness="2" Background="White" FontFamily="Century Gothic" SelectionBrush="#FF383838" Foreground="#FF383838" RenderTransformOrigin="0.5,0.5" TextAlignment="Center" FontWeight="Bold" FontSize="14">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <TextBox x:Name="textBox" Height="23" Margin="206,379,0,0" TextWrapping="Wrap" Width="170" BorderBrush="#FF383838" BorderThickness="2" Background="White" FontFamily="Century Gothic" SelectionBrush="#FF383838" Foreground="#FF383838" RenderTransformOrigin="0.5,0.5" TextAlignment="Center" FontWeight="Bold" FontSize="14" HorizontalAlignment="Left" VerticalAlignment="Top">
             <TextBox.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
