--- a/ChatRoomMain/ChatRoom.xaml
+++ b/ChatRoomMain/ChatRoom.xaml
@@ -7,17 +7,11 @@
         mc:Ignorable="d"
         Title="ChatRoom" Height="600" Width="500" HorizontalAlignment="Center" VerticalAlignment="Center">
     <Grid>
-        <ListView x:Name="listView" HorizontalAlignment="Left" Height="357" Margin="10,36,0,0" VerticalAlignment="Top" Width="472">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn/>
-                </GridView>
-            </ListView.View>
-        </ListView>
-        <TextBox x:Name="textBox1" HorizontalAlignment="Left" Height="139" Margin="10,414,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="351"/>
-        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="394,414,0,0" VerticalAlignment="Top" Width="75"/>
+        <TextBox x:Name="messageBox" HorizontalAlignment="Left" Height="139" Margin="10,414,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="351"/>
+        <Button x:Name="Send" Content="Send" HorizontalAlignment="Left" Margin="394,414,0,0" VerticalAlignment="Top" Width="75" Click="Send_Click"/>
         <Button x:Name="button1" Content="Button" HorizontalAlignment="Left" Margin="394,482,0,0" VerticalAlignment="Top" Width="75"/>
         <Label x:Name="label" Content="Label" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+        <ListBox x:Name="listBox" HorizontalAlignment="Left" Height="368" Margin="10,41,0,0" VerticalAlignment="Top" Width="459"/>
 
     </Grid>
 </Window>
