--- a/ChatRoomMain/MainWindow.xaml
+++ b/ChatRoomMain/MainWindow.xaml
@@ -23,7 +23,7 @@
                 </TransformGroup>
             </TextBox.RenderTransform>
         </TextBox>
-        <Button x:Name="button" Content="Go!" HorizontalAlignment="Left" Margin="414,377,0,0" VerticalAlignment="Top" Width="75" BorderThickness="2" Background="#FF383838" BorderBrush="#FF5F5D5D" Foreground="White" FontFamily="Ravie" RenderTransformOrigin="0.5,0.5" FontSize="13" Click="Login">
+        <Button x:Name="button" Content="Go!" HorizontalAlignment="Left" Margin="414,377,0,0" VerticalAlignment="Top" Width="75" BorderThickness="2" Background="#FF383838" BorderBrush="#FF5F5D5D" Foreground="White" FontFamily="Comic Sans MS" RenderTransformOrigin="0.5,0.5" FontSize="13" Click="Login">
             <Button.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
