--- a/ChatRoomMain/ChatRoom.xaml
+++ b/ChatRoomMain/ChatRoom.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ChatRoomMain.ChatRoom"
+﻿<Window x:Name="ChatWindows" x:Class="ChatRoomMain.ChatRoom"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -17,10 +17,12 @@
         </ListView>
         <TextBox x:Name="messageBox" HorizontalAlignment="Left" Height="139" Margin="10,414,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="351"/>
         <Button x:Name="Send" Content="Send" HorizontalAlignment="Left" Margin="394,414,0,0" VerticalAlignment="Top" Width="75" Click="Send_Click"/>
-        <Button x:Name="RecallButton" Content="Button" HorizontalAlignment="Left" Margin="394,482,0,0" VerticalAlignment="Top" Width="75" Click="RecallButton_Click"/>
+        <Button x:Name="RecallButton" Content="Recall" HorizontalAlignment="Left" Margin="394,482,0,0" VerticalAlignment="Top" Width="75" Click="RecallButton_Click"/>
 
         <Label x:Name="label" Content="Label" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
         <ListBox x:Name="listBox" HorizontalAlignment="Left" Height="368" Margin="10,41,0,0" VerticalAlignment="Top" Width="459"/>
+        <Button x:Name="RecallButton_Copy" Content="Recall" HorizontalAlignment="Left" Margin="394,482,0,0" VerticalAlignment="Top" Width="75" Click="RecallButton_Click"/>
+        <Button x:Name="button" Content="Log Out" HorizontalAlignment="Left" Margin="394,541,0,0" VerticalAlignment="Top" Width="75" Click="Logout_button"/>
 
     </Grid>
 </Window>
