--- a/ChatRoomMain/ChatRoom.xaml
+++ b/ChatRoomMain/ChatRoom.xaml
@@ -6,22 +6,20 @@
         xmlns:local="clr-namespace:ChatRoomMain"
         mc:Ignorable="d"
         Title="ChatRoom" Height="700" Width="800" VerticalAlignment="Center" WindowStartupLocation="CenterScreen" HorizontalAlignment="Center">
+    <Window.Background>
+        <ImageBrush/>
+    </Window.Background>
+
     <Grid Margin="0,0,0,-2">
         <Grid.Background>
             <ImageBrush ImageSource="Heads/ChatFrame.jpg"/>
         </Grid.Background>
-        <TextBox x:Name="textBox1" HorizontalAlignment="Left" Height="88" Margin="74,499,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="649" BorderBrush="White"/>
-        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="386,522,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button x:Name="button1" Content="Button" Margin="67,613,662,34" Width="50" BorderBrush="White" Height="20">
-            <Button.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="White" Offset="0"/>
-                    <GradientStop Color="White" Offset="1"/>
-                </LinearGradientBrush>
-            </Button.Background>
-        </Button>
-        <Label x:Name="UserNameLabel" Content="nameLabel" HorizontalAlignment="Left" Margin="74,54,0,0" VerticalAlignment="Top" FontFamily="Comic Sans MS" FontWeight="Bold" Foreground="#FF383838" FontSize="14"/>
-        <ListBox x:Name="listBox" HorizontalAlignment="Left" Height="410" Margin="74,80,0,0" VerticalAlignment="Top" Width="649" BorderBrush="White"/>
+        <TextBox x:Name="messageBox" HorizontalAlignment="Left" Height="99" Margin="79,488,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="645" BorderBrush="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" BorderThickness="0" Foreground="Black" SelectionBrush="White" Background="White" FontFamily="Comic Sans MS"/>
+        <Button x:Name="Send" Margin="71,0,0,38" VerticalAlignment="Bottom" Height="17" Content="Send" Foreground="#FF252424" Background="White" BorderBrush="White" Width="56" HorizontalAlignment="Left" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Comic Sans MS" FontWeight="Bold"/>
+        <Label x:Name="UserNameLabel" Content="nameLabel" HorizontalAlignment="Left" Margin="74,54,0,0" VerticalAlignment="Top" FontFamily="Lucida Calligraphy" FontWeight="Bold" Foreground="#FF383838" FontSize="14"/>
+        <ListBox x:Name="listBox" HorizontalAlignment="Left" Height="373" Margin="79,80,0,0" VerticalAlignment="Top" Width="645" BorderBrush="White" FontFamily="Comic Sans MS"/>
+        <Button x:Name="RecallButton" Margin="215,0,518,33" VerticalAlignment="Bottom" Height="17" Content="Recall" Foreground="#FF252424" Background="White" BorderBrush="White" Width="56" TextOptions.TextHintingMode="Fixed" FontFamily="Comic Sans MS" FontWeight="Bold"/>
+        <Button x:Name="Log_out" Margin="574,0,165,38" VerticalAlignment="Bottom" Height="17" Content="Logout" Foreground="#FF252424" Background="White" BorderBrush="White" TextOptions.TextHintingMode="Fixed" FontFamily="Comic Sans MS" FontWeight="Bold"/>
 
     </Grid>
 </Window>
