--- a/ChatRoomMain/ChatRoom.xaml
+++ b/ChatRoomMain/ChatRoom.xaml
@@ -5,15 +5,19 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ChatRoomMain"
         mc:Ignorable="d"
-        Title="ChatRoom" Height="600" Width="500" HorizontalAlignment="Center" VerticalAlignment="Center">
+        Title="ChatRoom" Height="757" Width="899" VerticalAlignment="Center" WindowStartupLocation="CenterScreen" HorizontalAlignment="Center" ResizeMode="NoResize" Icon="Heads/Icon.png">
+    <Window.Background>
+        <ImageBrush ImageSource="Heads/ChatFrame.jpg"/>
+    </Window.Background>
     <Grid>
-        <TextBox x:Name="messageBox" HorizontalAlignment="Left" Height="139" Margin="10,414,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="351" KeyDown="messageBox_KeyDown"/>
-        <Button x:Name="Send" Content="Send" HorizontalAlignment="Left" Margin="394,414,0,0" VerticalAlignment="Top" Width="75" Click="Send_Click"/>
-        <Button x:Name="RecallButton" Content="Recall" HorizontalAlignment="Left" Margin="394,482,0,0" VerticalAlignment="Top" Width="75" Click="RecallButton_Click"/>
+        <TextBox x:Name="messageBox" HorizontalAlignment="Left" Height="113" Margin="84,526,0,0" BorderThickness="0" TextWrapping="Wrap" VerticalAlignment="Top" Width="730" KeyDown="messageBox_KeyDown" FontFamily="Comic Sans MS" FontSize="16"/>
+        <Button x:Name="Send" Content="Send" Margin="84,0,0,41" VerticalAlignment="Bottom" Height="17" BorderThickness="0" Foreground="#FF252424" Background="White" BorderBrush="White" Width="56" HorizontalAlignment="Left" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Comic Sans MS" FontWeight="Bold" Click="Send_Click"/>
+        <Button x:Name="RecallButton" Content="Recall" VerticalAlignment="Bottom" BorderThickness="0" Height="17" Foreground="#FF252424" BorderBrush="White" Width="56" TextOptions.TextHintingMode="Fixed" FontFamily="Comic Sans MS" FontWeight="Bold" Margin="247,0,588,36" Background="White" Click="RecallButton_Click"/>
 
-        <Label x:Name="label" Content="Label" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-        <ListBox x:Name="listBox" HorizontalAlignment="Left" Height="368" Margin="10,36,0,0" VerticalAlignment="Top" Width="459"/>
-        <Button x:Name="Log_out" Content="Log out" HorizontalAlignment="Left" Margin="394,541,0,0" VerticalAlignment="Top" Width="75" Click="Log_out_Click"/>
+        <Label x:Name="UserNameLabel" Content="nameLabel" HorizontalAlignment="Left" Margin="364,51,0,0" VerticalAlignment="Top" FontFamily="Lucida Calligraphy" FontWeight="Bold" Foreground="#FF383838" FontSize="14"/>
+        <ListBox x:Name="listBox" HorizontalAlignment="Left" Height="406" Margin="84,80,0,0" VerticalAlignment="Top" BorderThickness="0" Width="730" FontFamily="Comic Sans MS" FontSize="16"/>
+        <Button x:Name="Log_out" Content="Out" VerticalAlignment="Bottom" Height="16.6" BorderThickness="0" Foreground="#FF252424" Background="White" BorderBrush="White" TextOptions.TextHintingMode="Fixed" FontFamily="Comic Sans MS" FontWeight="Bold" Margin="642,0,191,41.5" Width="54" Click="Log_out_Click"/>
+
 
     </Grid>
 </Window>
